# Alizarin_Tetris

./: CMakeLists.txt  ChangeLog  INSTALL  README.MD  ai.c  ai.h  atris.c  atris.h  button.h  compile_CMake.sh  config.h  display.c  display.h  event.c  fastrand.h  gamemenu.c  grid.h  highscore.c  highscore.h  identity.c  identity.h  menu.h  network.c  options.h  piece.c  piece.h  sound.c  sound.h
graphics/: LICENCE
styles/: Glow.Color
